@@ -552,15 +552,15 @@ Fedora 19 gave the following results:
     |          User Agent           | Wallclock |  CPU |  CPU |  Requests  | Iterations |
     |                               |  seconds  |  usr |  sys | per second | per second |
     +-------------------------------+-----------+------+------+------------+------------+
-    | LWP::UserAgent 6.05           |    18     | 1.08 | 0.29 |    27.8    |    365.0   |
+    | LWP::UserAgent 6.05           |    21     | 1.10 | 0.20 |    23.8    |    384.6   |
     +-------------------------------+-----------+------+------+------------+------------+
-    | LWP::Parallel::UserAgent 2.61 |    19     | 1.11 | 0.30 |    26.3    |    354.6   |
+    | LWP::Parallel::UserAgent 2.61 |    20     | 1.13 | 0.22 |    25.0    |    370.4   |
     +-------------------------------+-----------+------+------+------------+------------+
-    | WWW::Curl::Simple 0.100191    |    94     | 0.66 | 0.34 |     5.3    |    500.0   |
+    | WWW::Curl::Simple 0.100191    |    95     | 0.66 | 0.27 |     5.3    |    537.6   |
     +-------------------------------+-----------+------+------+------------+------------+
-    | Mojo::UserAgent 4.83          |    10     | 1.31 | 0.08 |    50.0    |    359.7   |
+    | Mojo::UserAgent 4.83          |    10     | 1.19 | 0.08 |    50.0    |    393.7   |
     +-------------------------------+-----------+------+------+------------+------------+
-    | WWW::Curl::UserAgent 0.9.6    |    10     | 0.61 | 0.05 |    50.0    |    757.6   |
+    | WWW::Curl::UserAgent 0.9.6    |    10     | 0.55 | 0.06 |    50.0    |    819.7   |
     +-------------------------------+-----------+------+------+------------+------------+
 
     500 requests (5 in parallel, 100 iterations):
@@ -568,13 +568,13 @@ Fedora 19 gave the following results:
     |          User Agent           | Wallclock |   CPU  |   CPU  |  Requests  | Iterations |
     |                               |  seconds  |   usr  |   sys  | per second | per second |
     +-------------------------------+-----------+--------+--------+------------+------------+
-    | LWP::Parallel::UserAgent 2.61 |      9    |   1.24 |   0.28 |     55.6   |     65.8   |
+    | LWP::Parallel::UserAgent 2.61 |     10    |   1.26 |   0.26 |     50.0   |     65.8   |
     +-------------------------------+-----------+--------+--------+------------+------------+
-    | WWW::Curl::Simple 0.100191    |    860    | 256.47 | 217.15 |      0.6   |      0.2   |
+    | WWW::Curl::Simple 0.100191    |    815    | 270.16 | 191.76 |      0.6   |      0.2   |
     +-------------------------------+-----------+--------+--------+------------+------------+
-    | Mojo::UserAgent 4.83          |    301    |   1.69 |   0.31 |      1.7   |     50.0   |
+    | Mojo::UserAgent 4.83          |      3    |   1.03 |   0.04 |    166.7   |     93.5   |
     +-------------------------------+-----------+--------+--------+------------+------------+
-    | WWW::Curl::UserAgent 0.9.6    |      3    |   0.47 |   0.06 |    166.7   |    188.7   |
+    | WWW::Curl::UserAgent 0.9.6    |      3    |   0.42 |   0.06 |    166.7   |    208.3   |
     +-------------------------------+-----------+--------+--------+------------+------------+
 
 =head1 SEE ALSO
