@@ -1,3 +1,6 @@
+    [ DOCUMENTATION ]
+    * add benchmarks for Mojo::UserAgent
+
 0.9.6
     [ BUG FIXES ]
     * returned request in callback handler uses correct base
